syntax = "proto3";
import "../../common/proto/common.proto";

message ContractRef{
    bytes contract_id = 1;
    Msg msg = 2;
}

message ContractList{
    repeated bytes contract_list =1;
    Msg msg = 2;
}